Testing for uploading and connecting the other sites
This is a commit test for adding other site and linking it first review it then accept the change.

--- a/batman.html
+++ b/batman.html
@@ -23,6 +23,7 @@
                 <a class = "three" href="#">History</a>
                 <a class = "four" href="#">Gadgets</a>
                 <a class = "five" href="#">Contact</a>
+                <a class = "five" href="https://github.com/sergioxmarquina/Salamancas/blob/master/SalamancaProject/salamanca.html">Other</a>
                 <hr />
             </div>
 
